# api/api/src/main/java/com/schullersoftwareservices/model/user/UserPreferences.java
@@ -1,0 +1,6 @@
+package com.schullersoftwareservices.model.user;
+
+import io.micronaut.serde.annotation.Serdeable;
+
+@Serdeable
+public record UserPreferences(Boolean enableParticles, String theme) {}
